# DIP

./: README.md
code/HITSZ-AutoCourses-master/robotDesignPractice/assessmentrules/: rules.md
code/expr_code/: expr1.cpp  expr1.hpp  expr2.cpp  expr3.cpp  expr3.hpp  expr4.cpp  expr4.hpp
code/rules/: port1.rules
code/新书代码/: 环境安装
code/新书代码/HIT_Test_ws/devel/: .catkin  .rosinstall  setup.sh
code/新书代码/HIT_Test_ws/devel/include/amcl/: AMCLConfig.h
code/新书代码/HIT_Test_ws/devel/include/apriltag_ros/: AnalyzeSingleImageRequest.h  AnalyzeSingleImageResponse.h  AprilTagDetection.h  AprilTagDetectionArray.h
code/新书代码/HIT_Test_ws/devel/include/astra_camera/: AstraConfig.h
code/新书代码/HIT_Test_ws/devel/include/base_local_planner/: Position2DInt.h
code/新书代码/HIT_Test_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
code/新书代码/HIT_Test_ws/devel/include/dashgo_tools/: check_msgAction.h  check_msgActionFeedback.h  check_msgActionGoal.h  check_msgActionResult.h  check_msgFeedback.h  check_msgGoal.h  check_msgResult.h
code/新书代码/HIT_Test_ws/devel/include/global_planner/: GlobalPlannerConfig.h
code/新书代码/HIT_Test_ws/devel/include/teb_local_planner/: FeedbackMsg.h  TebLocalPlannerReconfigureConfig.h  TrajectoryMsg.h  TrajectoryPointMsg.h
code/新书代码/HIT_Test_ws/devel/lib/amcl/: amcl
code/新书代码/HIT_Test_ws/devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node  apriltag_ros_static_cameral_point_to_dobot
code/新书代码/HIT_Test_ws/devel/lib/astra_camera/: astra_camera_node  astra_list_devices  astra_test_wrapper
code/新书代码/HIT_Test_ws/devel/lib/base_local_planner/: point_grid
code/新书代码/HIT_Test_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
code/新书代码/HIT_Test_ws/devel/lib/dashgo_driver/: dashgo_driver
code/新书代码/HIT_Test_ws/src/dashgo_driver/: CMakeLists.txt  package.xml
code/新书代码/HIT_Test_ws/src/probot_vision/: CMakeLists.txt  ost.yaml  ost_4_new.yaml
code/新书代码/HIT_Test_ws/src/probot_vision/include/probot_vision/: vision_manager.h
code/新书代码/HIT_Test_ws/src/probot_vision/launch/: usb_cam.launch  usb_cam_in_hand.launch  usb_cam_with_calibration.launch
code/新书代码/HIT_Test_ws/src/probot_vision/src/: image_correct.cpp  vision_manager.cpp
code/新书代码/ROS_Test_ws/devel/: .catkin  .rosinstall  setup.sh
code/新书代码/ROS_Test_ws/src/my_tutorials/: CMakeLists.txt
code/新书代码/apriltag_ws/build_isolated/: catkin_make_isolated.cache
code/新书代码/apriltag_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
code/新书代码/apriltag_ws/devel_isolated/apriltag/: setup.bash  setup.sh  setup.zsh
code/新书代码/catkin_ws/build_isolated/: catkin_make_isolated.cache
code/新书代码/catkin_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
code/新书代码/catkin_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
code/新书代码/catkin_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
code/新书代码/catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
code/新书代码/catkin_ws/devel_isolated/cartographer_ros/: .catkin  .rosinstall  setup.sh
code/新书代码/catkin_ws/devel_isolated/cartographer_ros_msgs/: .catkin  .rosinstall  setup.sh
code/新书代码/catkin_ws/devel_isolated/cartographer_rviz/: .catkin  .rosinstall  setup.sh
code/新书代码/catkin_ws/src/: .rosinstall
dip_ws/devel/: .catkin  local_setup.sh
dip_ws/devel/include/dashgo_tools/: check_msgAction.h  check_msgActionFeedback.h  check_msgActionGoal.h  check_msgActionResult.h  check_msgFeedback.h  check_msgGoal.h  check_msgResult.h
dip_ws/devel/include/dip/: pid_driver.h
dip_ws/devel/lib/dashgo_driver/: dashgo_driver
dip_ws/devel/lib/dashgo_tools/: get_scan_data
dip_ws/devel/lib/dip/: dip  dip1_node  dip2_node  dip3_node  dip4_node  dip8  dip_node  drawImageHistogram  experiment1  experiment1_demo  experiment2  experiment3  experiment4  expr2  expr3  expr4  expt1_grayProcessing  quaternion_test
dip_ws/devel/lib/pkgconfig/: amcl.pc  apriltag_ros.pc  astra_camera.pc  astra_launch.pc  dashgo_description.pc  dashgo_driver.pc  dashgo_nav.pc  dashgo_rviz.pc  dashgo_tools.pc  dip.pc  ltme01_driver.pc  map_server.pc  my_tutorials.pc
dip_ws/devel/share/amcl/cmake/: amclConfig.cmake
dip_ws/devel/share/apriltag_ros/cmake/: apriltag_ros-msg-paths.cmake  apriltag_rosConfig.cmake
dip_ws/devel/share/astra_camera/cmake/: astra_cameraConfig.cmake
dip_ws/devel/share/astra_launch/cmake/: astra_launchConfig.cmake
dip_ws/devel/share/dashgo_description/cmake/: dashgo_descriptionConfig.cmake
dip_ws/devel/share/dashgo_driver/cmake/: dashgo_driverConfig.cmake
dip_ws/devel/share/dashgo_nav/cmake/: dashgo_navConfig.cmake
dip_ws/devel/share/dashgo_rviz/cmake/: dashgo_rvizConfig.cmake
dip_ws/devel/share/dashgo_tools/cmake/: dashgo_tools-msg-extras.cmake  dashgo_tools-msg-paths.cmake  dashgo_toolsConfig.cmake
dip_ws/devel/share/dip/cmake/: dip-msg-extras.cmake  dip-msg-paths.cmake  dipConfig.cmake
dip_ws/devel/share/ltme01_driver/cmake/: ltme01_driverConfig.cmake
dip_ws/devel/share/map_server/cmake/: map_serverConfig.cmake
dip_ws/devel/share/my_tutorials/cmake/: my_tutorialsConfig.cmake
dip_ws/src/dashgo_driver/: CMakeLists.txt
dip_ws/src/dashgo_driver/src/: dashgo_driver.cpp
dip_ws/src/dashgo_nav/config/imu/: costmap_common_params.yaml
dip_ws/src/dashgo_nav/maps/: eai_map_imu.pgm
dip_ws/src/dashgo_tools/: CMakeLists.txt
dip_ws/src/dashgo_tools/src/: get_scan_data.cpp
dip_ws/src/dip/: CMakeLists.txt
dip_ws/src/dip/include/dipLib/: dipLib.cpp  dipLib.h
dip_ws/src/dip/src/: dip.cpp  dip2_node.cpp  dip3_node.cpp  drawImageHistogram.cpp  experiment1.cpp  experiment2.cpp  experiment3.cpp  experiment4.cpp
(+293 files in other folders)
